// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Button Active 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 jmneFO sc-breuTD sc-ksZaOG Krizp gsTBap sc-dIouRR kAoSkv"
      type="button"
    >
      Active
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv"
      type="button"
    >
      Default
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 cXcrjt sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv"
      disabled=""
      type="button"
    >
      Disabled
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Icon Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 jllRpX sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR kAoSkv"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-recycle "
        data-icon="recycle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M206.7 45.1C224.2 17 255 0 288 0s63.8 17 81.3 45.1l38.6 61.7 27-15.6c8.4-4.9 18.9-4.2 26.6 1.7s11.1 15.9 8.6 25.3l-23.4 87.4c-3.4 12.8-16.6 20.4-29.4 17l-87.4-23.4c-9.4-2.5-16.3-10.4-17.6-20s3.4-19.1 11.8-23.9l28.4-16.4L315 79c-5.8-9.3-16-15-27-15s-21.2 5.7-27 15l-17.5 28c-9.2 14.8-28.6 19.5-43.6 10.5c-15.3-9.2-20.2-29.2-10.7-44.4l17.5-28zM461.5 251.9c15-9 34.4-4.3 43.6 10.5l24.4 39.1c9.4 15.1 14.4 32.4 14.6 50.2c.3 53.1-42.7 96.4-95.8 96.4L352 448v32c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-64-64c-9.4-9.4-9.4-24.6 0-33.9l64-64c6.9-6.9 17.2-8.9 26.2-5.2s14.8 12.5 14.8 22.2v32l96.2 0c17.6 0 31.9-14.4 31.8-32c0-5.9-1.7-11.7-4.8-16.7l-24.4-39.1c-9.5-15.2-4.7-35.2 10.7-44.4zm-364.6-31L68 204.2c-8.4-4.9-13.1-14.3-11.8-23.9s8.2-17.5 17.6-20l87.4-23.4c12.8-3.4 26 4.2 29.4 17L214 241.2c2.5 9.4-.9 19.3-8.6 25.3s-18.2 6.6-26.6 1.7l-26.5-15.3-51.5 82.4c-3.1 5-4.8 10.8-4.8 16.7c-.1 17.6 14.2 32 31.8 32l32.2 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32.2 0c-53.1 0-96.1-43.2-95.8-96.4c.1-17.8 5.1-35.1 14.6-50.2l50.3-80.5z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Link 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <a
      class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv"
      href="#"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Core/Button Outlined 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv"
      type="button"
    >
      Outlined
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Plain 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR kAoSkv"
      type="button"
    >
      Plain
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Primary 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 gvCdQt sc-breuTD sc-ksZaOG Krizp jFzPEx sc-dIouRR kAoSkv"
      type="button"
    >
      Primary
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Underlined 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL sc-idiyUo Krizp gOoGXe hvtBsx sc-dIouRR kAoSkv"
      type="button"
    >
      Underlined
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button With Confirmation 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 iSYCWd sc-breuTD sc-ksZaOG Krizp jljCjl sc-dIouRR kAoSkv"
      type="button"
    >
      Dangerous
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button With Icon 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <button
      class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR kAoSkv"
      type="button"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ldiscS"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-expand "
          data-icon="expand"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M32 32C14.3 32 0 46.3 0 64v96c0 17.7 14.3 32 32 32s32-14.3 32-32V96h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H32zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64V352zM320 32c-17.7 0-32 14.3-32 32s14.3 32 32 32h64v64c0 17.7 14.3 32 32 32s32-14.3 32-32V64c0-17.7-14.3-32-32-32H320zM448 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H320c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V352z"
            fill="currentColor"
          />
        </svg>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jSFCNu"
        />
        With icon
      </div>
    </button>
  </div>
</div>
`;
